--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for='temperature' class=label>Temperature<label> <span class=detail>(°C)</span>
         <div class=row>
           <div class=column style='width: 20%'>
-            waka<span id='temperature_display' class=selected_value>0</span>
+            <span id='temperature_display' class=selected_value>0</span>
           </div>
           <div class=column style='width: 80%'>
             <input type='range' min='-40' max='40' step='5' value='0' class=slider  id='temperature' oninput=calc_power_available()>
