major bug fixes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       
-      <div class=section>
+      <div class=section style='text-align: center'>
         <h2>Power Required</h2>
         <span id=pr class=selected_value>x</span>
       </div>
