--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       	        
       	<input type='number' id='altimeter_setting' value=29.92 oninput=on_altimeter_setting_input() onblur=calc_power_available()>
 	<br><br>
-      	<label for='true_altitude' class=label>True Altitude</label> <span class=detail>(in feet)</span>
-      	      	        <span class=tooltip>[?]<span class=tooltiptext>True altitude above sea level</span></span><br>
+      	<label for='true_altitude' class=label>True Altitude</label> <span class=detail>(in feet)</span><br>
       	<input type='number' id='true_altitude' value=0 onblur=calc_power_available()>
 	<br><br>
         <label for='pressure_altitude' class=label>Pressure Altitude</label><br>
